--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroui/theme": "^2.4.20",
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.50",
     "framer-motion": "^12.23.12",
