--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@supabase/supabase-js": "^2.54.0",
     "@vercel/analytics": "^1.5.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.50",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "next": "15.4.4",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.5.0",
@@ -37,6 +41,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/formidable": "^3.4.5",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
