--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "next": "15.4.4",
+    "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
