--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@stripe/stripe-js": "^7.8.0",
     "@supabase/supabase-js": "^2.54.0",
     "@vercel/analytics": "^1.5.0",
     "cloudinary": "^2.7.0",
@@ -34,6 +35,7 @@
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "stripe": "^18.4.0",
     "styled-components": "^6.1.19",
     "tailwind-scrollbar": "^4.0.2",
     "tailwind-scrollbar-hide": "^4.0.0",
