--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.542.0",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
