--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
     "next": "^16.0.7",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.30",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
